added more projects

--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
               src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=600&size=24&pause=1500&color=FFFFFF&center=true&vCenter=true&width=500&
               lines=
               Cool stuff I've built;
-              More on my Github"
+              More on my GitHub"
               alt="Typing Animation"
             />
           </div>
@@ -118,6 +118,9 @@
                     Custom implementation of a Unix shell
                   </p>
                   <span class="text-xs bg-purple-600 px-2 py-1 rounded">C</span>
+                  <span class="text-xs bg-purple-600 px-2 py-1 rounded"
+                    >gdb</span
+                  >
                 </a>
               </div>
 
@@ -284,10 +287,8 @@
                   <p class="text-gray-400 mb-3">
                     University TA payroll management system
                   </p>
-                  <span class="text-xs bg-blue-700 px-2 py-1 rounded"
-                    >Java</span
-                  >
-                  <span class="text-xs bg-blue-700 px-2 py-1 rounded"
+                  <span class="text-xs bg-red-900 px-2 py-1 rounded">Java</span>
+                  <span class="text-xs bg-red-900 px-2 py-1 rounded"
                     >JUnit</span
                   >
                 </a>
@@ -318,6 +319,51 @@
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
               >
                 <a
+                  href="https://github.com/DanielSon721/Garbage-Collector"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="block"
+                >
+                  <h3 class="text-xl font-bold mb-2">Garbage Collector</h3>
+                  <p class="text-gray-400 mb-3">
+                    Garbage collection methods<br /><br />
+                  </p>
+                  <span class="text-xs bg-pink-400 px-2 py-1 rounded"
+                    >Rust</span
+                  >
+                  <span class="text-xs bg-pink-400 px-2 py-1 rounded"
+                    >Regex</span
+                  >
+                </a>
+              </div>
+
+              <!-- Project 13 -->
+              <div
+                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+              >
+                <a
+                  href="https://github.com/DanielSon721/Calendar"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="block"
+                >
+                  <h3 class="text-xl font-bold mb-2">Calendar</h3>
+                  <p class="text-gray-400 mb-3">
+                    Simple calendar system<br /><br />
+                  </p>
+                  <span class="text-xs bg-blue-700 px-2 py-1 rounded">C</span>
+                  <span class="text-xs bg-blue-700 px-2 py-1 rounded">gdb</span>
+                  <span class="text-xs bg-blue-700 px-2 py-1 rounded"
+                    >Valgrind</span
+                  >
+                </a>
+              </div>
+
+              <!-- Project 14 -->
+              <div
+                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+              >
+                <a
                   href="https://github.com/DanielSon721/Complex-Calculator"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -327,11 +373,32 @@
                   <p class="text-gray-400 mb-3">
                     Fraction and complex number calulator
                   </p>
-                  <span class="text-xs bg-pink-400 px-2 py-1 rounded"
+                  <span class="text-xs bg-orange-700 px-2 py-1 rounded"
                     >Java</span
                   >
-                  <span class="text-xs bg-pink-400 px-2 py-1 rounded"
+                  <span class="text-xs bg-orange-700 px-2 py-1 rounded"
                     >Breezyswing</span
+                  >
+                </a>
+              </div>
+
+              <!-- Project 15 -->
+              <div
+                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+              >
+                <a
+                  href="https://github.com/DanielSon721/Document-Editor"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="block"
+                >
+                  <h3 class="text-xl font-bold mb-2">Document Editor</h3>
+                  <p class="text-gray-400 mb-3">
+                    Simple text document editor system
+                  </p>
+                  <span class="text-xs bg-purple-900 px-2 py-1 rounded">C</span>
+                  <span class="text-xs bg-purple-900 px-2 py-1 rounded"
+                    >gdb</span
                   >
                 </a>
               </div>
