--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
                       >gdb</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Valgrind</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Dune</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
@@ -221,6 +224,9 @@
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >scikit-learn</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Regex</span
                     >
                   </div>
                 </div>
@@ -345,6 +351,9 @@
                     </p>
                     <span class="text-xs bg-purple-600 px-2 py-1 rounded"
                       >C</span
+                    >
+                    <span class="text-xs bg-purple-600 px-2 py-1 rounded"
+                      >gdb</span
                     >
                   </a>
                 </div>
