--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                       >Python</span
                     >
                     <span class="text-xs bg-green-700 px-2 py-1 rounded"
-                      >Pandas</span
+                      >pandas</span
                     >
                     <span class="text-xs bg-green-700 px-2 py-1 rounded"
                       >Google Sheets API</span
@@ -477,6 +477,11 @@
                       >Python</span
                     >
                   </a>
+                </div>
+
+                <!-- More Projects Button-->
+                <div class="mt-3 md:col-span-2 flex justify-center">
+                  <a href="projects.html" class="neon-button">More Projects</a>
                 </div>
               </div>
             </div>
