--- a/projects.html
+++ b/projects.html
@@ -165,7 +165,7 @@
                     >Python</span
                   >
                   <span class="text-xs bg-green-700 px-2 py-1 rounded"
-                    >Pandas</span
+                    >pandas</span
                   >
                   <span class="text-xs bg-green-700 px-2 py-1 rounded"
                     >Google Sheets API</span
@@ -214,7 +214,7 @@
                 >
                   <h3 class="text-xl font-bold mb-2">Slime Skirmish</h3>
                   <p class="text-gray-400 mb-3">
-                    2-Dimensional Survival Game<br /><br />
+                    2-Dimensional survival game made on Unity game engine
                   </p>
                   <span class="text-xs bg-orange-500 px-2 py-1 rounded"
                     >C#</span
@@ -259,13 +259,13 @@
                   <p class="text-gray-400 mb-3">
                     RLCS Esports match outcome predictor
                   </p>
-                  <span class="text-xs bg-yellow-500 px-2 py-1 rounded"
+                  <span class="text-xs bg-yellow-600 px-2 py-1 rounded"
                     >Jupyter Notebook</span
                   >
-                  <span class="text-xs bg-yellow-500 px-2 py-1 rounded"
-                    >Pandas</span
+                  <span class="text-xs bg-yellow-600 px-2 py-1 rounded"
+                    >pandas</span
                   >
-                  <span class="text-xs bg-yellow-500 px-2 py-1 rounded"
+                  <span class="text-xs bg-yellow-600 px-2 py-1 rounded"
                     >scikit-learn</span
                   >
                 </a>
@@ -306,7 +306,7 @@
                 >
                   <h3 class="text-xl font-bold mb-2">Assembly Methods</h3>
                   <p class="text-gray-400 mb-3">
-                    Basic functions written in MIPS assembly
+                    Basic methods written in MIPS Assembly
                   </p>
                   <span class="text-xs bg-gray-500 px-2 py-1 rounded"
                     >Assembly</span
