tweaked about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -93,6 +93,9 @@
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Show : Andor</span
                     >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Video Game : Rocket League</span
+                    >
                   </div>
                 </div>
 
@@ -113,6 +116,9 @@
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Photography</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Coding</span
                     >
                   </div>
                 </div>
