--- a/index.html
+++ b/index.html
@@ -129,6 +129,16 @@
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Assembly</span
                     >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded">R</span>
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >HTML</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >CSS</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Javascript</span
+                    >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >LaTeX</span
                     >
@@ -202,6 +212,9 @@
                       >Unity</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >RStudio</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >JUnit</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
@@ -224,6 +237,9 @@
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >scikit-learn</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Tidyverse</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Regex</span
