--- a/projects.html
+++ b/projects.html
@@ -59,17 +59,21 @@
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
               >
                 <a
-                  href="https://github.com/DanielSon721/Why-I-Love-Cybersecurity"
+                  href="https://github.com/DanielSon721/Portfolio"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="block"
                 >
-                  <h3 class="text-xl font-bold mb-2">
-                    Why I Love Cybersecurity
-                  </h3>
-                  <p class="text-gray-400 mb-3">An essay<br /><br /></p>
+                  <h3 class="text-xl font-bold mb-2">Portfolio</h3>
+                  <p class="text-gray-400 mb-3">
+                    The website you're looking at right now
+                  </p>
                   <span class="text-xs bg-blue-400 px-2 py-1 rounded"
-                    >English</span
+                    >HTML</span
+                  >
+                  <span class="text-xs bg-blue-400 px-2 py-1 rounded">CSS</span>
+                  <span class="text-xs bg-blue-400 px-2 py-1 rounded"
+                    >Javascript</span
                   >
                 </a>
               </div>
@@ -387,18 +391,21 @@
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
               >
                 <a
-                  href="https://github.com/DanielSon721/Document-Editor"
+                  href="https://github.com/DanielSon721/Financial-Inclusion"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="block"
                 >
-                  <h3 class="text-xl font-bold mb-2">Document Editor</h3>
+                  <h3 class="text-xl font-bold mb-2">Financial Inclusion</h3>
                   <p class="text-gray-400 mb-3">
-                    Simple text document editor system
+                    Analyzing trends in financial account ownership
                   </p>
-                  <span class="text-xs bg-purple-900 px-2 py-1 rounded">C</span>
+                  <span class="text-xs bg-purple-900 px-2 py-1 rounded">R</span>
                   <span class="text-xs bg-purple-900 px-2 py-1 rounded"
-                    >gdb</span
+                    >RStudio</span
+                  >
+                  <span class="text-xs bg-purple-900 px-2 py-1 rounded"
+                    >Tidyverse</span
                   >
                 </a>
               </div>
