updated portfolio project

--- a/index.html
+++ b/index.html
@@ -131,15 +131,6 @@
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded">R</span>
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >HTML</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >CSS</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Javascript</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >LaTeX</span
                     >
                   </div>
@@ -159,24 +150,6 @@
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Kali Linux</span
-                    >
-                  </div>
-                </div>
-
-                <div>
-                  <h3 class="text-xl font-semibold mb-2">Security Skills</h3>
-                  <div class="flex flex-wrap gap-2">
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Incident Response</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Network Analysis</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Risk Management</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Automation</span
                     >
                   </div>
                 </div>
@@ -239,10 +212,38 @@
                       >scikit-learn</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Tidyverse</span
+                      >Regex</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Regex</span
+                      >Tidyverse</span
+                    >
+
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >ChatGPT</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >DeepSeek</span
+                    >
+                  </div>
+                </div>
+
+                <div>
+                  <h3 class="text-xl font-semibold mb-2">Other</h3>
+                  <div class="flex flex-wrap gap-2">
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Incident Response</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Network Analysis</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Risk Management</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Prompt Engineering</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Automation</span
                     >
                   </div>
                 </div>
@@ -307,17 +308,20 @@
                   class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <a
-                    href="https://github.com/DanielSon721/Why-I-Love-Cybersecurity"
+                    href="https://github.com/DanielSon721/Portfolio"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="block"
                   >
-                    <h3 class="text-xl font-bold mb-2">
-                      Why I Love Cybersecurity
-                    </h3>
-                    <p class="text-gray-400 mb-3">An essay<br /><br /></p>
+                    <h3 class="text-xl font-bold mb-2">Portfolio</h3>
+                    <p class="text-gray-400 mb-3">
+                      The website you're looking at right now
+                    </p>
                     <span class="text-xs bg-blue-400 px-2 py-1 rounded"
-                      >English</span
+                      >Prompt Engineering</span
+                    >
+                    <span class="text-xs bg-blue-400 px-2 py-1 rounded"
+                      >ChatGPT</span
                     >
                   </a>
                 </div>
