--- a/projects.html
+++ b/projects.html
@@ -69,11 +69,10 @@
                     The website you're looking at right now
                   </p>
                   <span class="text-xs bg-blue-400 px-2 py-1 rounded"
-                    >HTML</span
+                    >Prompt Engineering</span
                   >
-                  <span class="text-xs bg-blue-400 px-2 py-1 rounded">CSS</span>
                   <span class="text-xs bg-blue-400 px-2 py-1 rounded"
-                    >Javascript</span
+                    >ChatGPT</span
                   >
                 </a>
               </div>
