--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-<!--writing.html-->
+<!--projects.html-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -24,7 +24,7 @@
 
     <canvas id="canvas"></canvas>
 
-    <div class="content-wrapper">
+    <div class="content-wrapper mx-auto">
       <!-- Main Writing Samples Grid -->
       <div id="samples-grid">
         <div
