--- a/writing.html
+++ b/writing.html
@@ -24,7 +24,7 @@
 
     <canvas id="canvas"></canvas>
 
-    <div class="content-wrapper">
+    <div class="content-wrapper mx-auto">
       <!-- PDF Viewer Section -->
       <div id="pdf-viewer-section" class="hidden my-6 px-4">
         <div class="black-box">
