--- a/aboutme.html
+++ b/aboutme.html
@@ -1,4 +1,4 @@
-<!--writing.html-->
+<!--aboutme.html-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -23,7 +23,7 @@
 
     <canvas id="canvas"></canvas>
 
-    <div class="content-wrapper">
+    <div class="content-wrapper mx-auto">
       <!-- Header -->
       <div
         class="h-screen flex flex-col justify-center items-center text-center"
