several bug fixes

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daniel Son</title>
-    <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header id="scroll-header" class="matrix-header">
@@ -45,7 +45,7 @@
 
       <!-- Combined Black Box Section -->
       <div class="my-12 px-4">
-        <div class="bg-black/80 rounded-2xl shadow-lg p-6 max-w-6xl mx-auto">
+        <div class="black-content-box container-override">
           <!-- Socials at the top -->
           <br />
           <div class="flex flex-wrap justify-center gap-4 mb-8">
@@ -512,9 +512,7 @@
           <!-- Education Section -->
           <div class="mt-12">
             <h2 class="text-3xl font-bold mb-6 text-center">🎓 Education</h2>
-            <div
-              class="bg-black/80 rounded-2xl shadow-lg p-6 max-w-6xl mx-auto"
-            >
+            <div class="max-w-6xl mx-auto">
               <h3 class="text-2xl font-bold mb-4 text-center">
                 University of Maryland - Computer Science and Mathematics
               </h3>
