--- a/aboutme.html
+++ b/aboutme.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daniel Son</title>
-    <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header id="scroll-header" class="matrix-header">
@@ -44,7 +44,7 @@
 
       <!-- Combined Black Box Section -->
       <div class="my-12 px-4">
-        <div class="bg-black/80 rounded-2xl shadow-lg p-6 max-w-6xl mx-auto">
+        <div class="black-content-box container-override">
           <!-- Go Back Button (now outside the black box) -->
           <div class="text-center my-6">
             <a href="index.html" class="neon-button">Home</a>
