--- a/writing.html
+++ b/writing.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daniel Son - Writing Samples</title>
-    <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.12.313/pdf.min.js"></script>
   </head>
   <body>
@@ -54,7 +54,7 @@
         </div>
 
         <div class="my-12 px-4">
-          <div class="bg-black/80 rounded-2xl shadow-lg p-6 max-w-6xl mx-auto">
+          <div class="black-content-box container-override">
             <br />
             <div class="text-center my-6">
               <a href="index.html" class="neon-button">Home</a>
