--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                   >
                     <h3 class="text-xl font-bold mb-2">Texas Hold'em Poker</h3>
                     <p class="text-gray-400 mb-3">
-                      Play poker against A.I. opponents
+                      Play poker against A.I. opponents<br /><br />
                     </p>
                     <span class="text-xs bg-red-600 px-2 py-1 rounded"
                       >Python</span
