--- a/aboutme.html
+++ b/aboutme.html
@@ -44,7 +44,7 @@
 
       <!-- Combined Black Box Section -->
       <div class="my-12 px-4">
-        <div class="black-content-box container-override">
+        <div class="black-content-box">
           <!-- Go Back Button (now outside the black box) -->
           <div class="text-center my-6">
             <a href="index.html" class="neon-button">Home</a>
