--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <!-- Combined Black Box Section -->
       <div class="my-12 px-4">
-        <div class="black-content-box container-override">
+        <div class="black-content-box">
           <!-- Socials at the top -->
           <br />
           <div class="flex flex-wrap justify-center gap-4 mb-8">
