--- a/writing.html
+++ b/writing.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="my-12 px-4">
-          <div class="black-content-box container-override">
+          <div class="black-content-box">
             <br />
             <div class="text-center my-6">
               <a href="index.html" class="neon-button">Home</a>
