--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
                 >
                   <h3 class="text-xl font-bold mb-2">Portfolio</h3>
                   <p class="text-gray-400 mb-3">
-                    The website you're looking at right now
+                    The website you're looking at right now<br /><br />
                   </p>
                   <span class="text-xs bg-blue-400 px-2 py-1 rounded"
                     >Prompt Engineering</span
@@ -118,7 +118,7 @@
                 >
                   <h3 class="text-xl font-bold mb-2">Unix Shell</h3>
                   <p class="text-gray-400 mb-3">
-                    Custom implementation of a Unix shell
+                    Custom implementation of a Unix shell<br /><br />
                   </p>
                   <span class="text-xs bg-purple-600 px-2 py-1 rounded">C</span>
                   <span class="text-xs bg-purple-600 px-2 py-1 rounded"
@@ -139,7 +139,7 @@
                 >
                   <h3 class="text-xl font-bold mb-2">OCaml Interpreter</h3>
                   <p class="text-gray-400 mb-3">
-                    Simple computer language interpreter
+                    Simple computer language interpreter<br /><br />
                   </p>
                   <span class="text-xs bg-yellow-900 px-2 py-1 rounded"
                     >OCaml</span
@@ -260,7 +260,7 @@
                 >
                   <h3 class="text-xl font-bold mb-2">RLCS Predictor</h3>
                   <p class="text-gray-400 mb-3">
-                    RLCS Esports match outcome predictor
+                    RLCS Esports match outcome predictor<br /><br />
                   </p>
                   <span class="text-xs bg-yellow-600 px-2 py-1 rounded"
                     >Jupyter Notebook</span
@@ -288,7 +288,7 @@
                     Payroll Management System
                   </h3>
                   <p class="text-gray-400 mb-3">
-                    University TA payroll management system
+                    University TA payroll management system<br /><br />
                   </p>
                   <span class="text-xs bg-red-900 px-2 py-1 rounded">Java</span>
                   <span class="text-xs bg-red-900 px-2 py-1 rounded"
@@ -309,7 +309,7 @@
                 >
                   <h3 class="text-xl font-bold mb-2">Assembly Methods</h3>
                   <p class="text-gray-400 mb-3">
-                    Basic methods written in MIPS Assembly
+                    Basic methods written in MIPS Assembly<br /><br />
                   </p>
                   <span class="text-xs bg-gray-500 px-2 py-1 rounded"
                     >Assembly</span
@@ -374,7 +374,7 @@
                 >
                   <h3 class="text-xl font-bold mb-2">Complex Calculator</h3>
                   <p class="text-gray-400 mb-3">
-                    Fraction and complex number calulator
+                    Fraction and complex number calulator<br /><br />
                   </p>
                   <span class="text-xs bg-orange-700 px-2 py-1 rounded"
                     >Java</span
