--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                   >
                     <h3 class="text-xl font-bold mb-2">Unix Shell</h3>
                     <p class="text-gray-400 mb-3">
-                      Custom implementation of a Unix shell
+                      Custom implementation of a Unix shell<br /><br />
                     </p>
                     <span class="text-xs bg-purple-600 px-2 py-1 rounded"
                       >C</span
@@ -390,7 +390,7 @@
                   >
                     <h3 class="text-xl font-bold mb-2">OCaml Interpreter</h3>
                     <p class="text-gray-400 mb-3">
-                      Simple computer language interpreter
+                      Simple computer language interpreter<br /><br />
                     </p>
                     <span class="text-xs bg-yellow-900 px-2 py-1 rounded"
                       >OCaml</span
