fixed project formatting

--- a/index.html
+++ b/index.html
@@ -305,197 +305,233 @@
               <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- Project 1 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/Portfolio"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="block"
+                    class="block flex-grow"
                   >
                     <h3 class="text-xl font-bold mb-2">Portfolio</h3>
-                    <p class="text-gray-400 mb-3">
+                    <p class="text-gray-400 mb-3 min-h-[4.5rem]">
                       The website you're looking at right now
                     </p>
-                    <span class="text-xs bg-blue-400 px-2 py-1 rounded"
-                      >Prompt Engineering</span
-                    >
-                    <span class="text-xs bg-blue-400 px-2 py-1 rounded"
-                      >ChatGPT</span
-                    >
+                    <div class="mt-auto">
+                      <span
+                        class="text-xs bg-blue-400 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Prompt Engineering</span
+                      >
+                      <span
+                        class="text-xs bg-blue-400 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >ChatGPT</span
+                      >
+                    </div>
                   </a>
                 </div>
 
                 <!-- Project 2 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/Home-Lab"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="block"
+                    class="block flex-grow"
                   >
                     <h3 class="text-xl font-bold mb-2">Home Lab</h3>
-                    <p class="text-gray-400 mb-3">
+                    <p class="text-gray-400 mb-3 min-h-[4.5rem]">
                       VM configuration, network analysis, ethical hacking
                     </p>
-                    <span class="text-xs bg-pink-600 px-2 py-1 rounded"
-                      >Kali Linux</span
-                    >
-                    <span class="text-xs bg-pink-600 px-2 py-1 rounded"
-                      >VMWare</span
-                    >
-                    <span class="text-xs bg-pink-600 px-2 py-1 rounded"
-                      >Wireshark</span
-                    >
-                    <span class="text-xs bg-pink-600 px-2 py-1 rounded"
-                      >Nmap</span
-                    >
+                    <div class="mt-auto">
+                      <span
+                        class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Kali Linux</span
+                      >
+                      <span
+                        class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >VMWare</span
+                      >
+                      <span
+                        class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Wireshark</span
+                      >
+                      <span
+                        class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Nmap</span
+                      >
+                    </div>
                   </a>
                 </div>
 
                 <!-- Project 3 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/Unix-Shell"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="block"
+                    class="block flex-grow"
                   >
                     <h3 class="text-xl font-bold mb-2">Unix Shell</h3>
-                    <p class="text-gray-400 mb-3">
-                      Custom implementation of a Unix shell<br /><br />
+                    <p class="text-gray-400 mb-3 min-h-[4.5rem]">
+                      Custom implementation of a Unix shell
                     </p>
-                    <span class="text-xs bg-purple-600 px-2 py-1 rounded"
-                      >C</span
-                    >
-                    <span class="text-xs bg-purple-600 px-2 py-1 rounded"
-                      >gdb</span
-                    >
+                    <div class="mt-auto">
+                      <span
+                        class="text-xs bg-purple-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >C</span
+                      >
+                      <span
+                        class="text-xs bg-purple-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >gdb</span
+                      >
+                    </div>
                   </a>
                 </div>
 
                 <!-- Project 4 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/OCaml-Interpreter"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="block"
+                    class="block flex-grow"
                   >
                     <h3 class="text-xl font-bold mb-2">OCaml Interpreter</h3>
-                    <p class="text-gray-400 mb-3">
-                      Simple computer language interpreter<br /><br />
+                    <p class="text-gray-400 mb-3 min-h-[4.5rem]">
+                      Simple computer language interpreter
                     </p>
-                    <span class="text-xs bg-yellow-900 px-2 py-1 rounded"
-                      >OCaml</span
-                    >
-                    <span class="text-xs bg-yellow-900 px-2 py-1 rounded"
-                      >Dune</span
-                    >
+                    <div class="mt-auto">
+                      <span
+                        class="text-xs bg-yellow-900 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >OCaml</span
+                      >
+                      <span
+                        class="text-xs bg-yellow-900 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Dune</span
+                      >
+                    </div>
                   </a>
                 </div>
 
                 <!-- Project 5 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/Auto-Messenger"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="block"
+                    class="block flex-grow"
                   >
                     <h3 class="text-xl font-bold mb-2">Auto Messenger</h3>
-                    <p class="text-gray-400 mb-3">
+                    <p class="text-gray-400 mb-3 min-h-[4.5rem]">
                       Messaging system for fraternity financial communications
                     </p>
-                    <span class="text-xs bg-green-700 px-2 py-1 rounded"
-                      >Python</span
-                    >
-                    <span class="text-xs bg-green-700 px-2 py-1 rounded"
-                      >pandas</span
-                    >
-                    <span class="text-xs bg-green-700 px-2 py-1 rounded"
-                      >Google Sheets API</span
-                    >
+                    <div class="mt-auto">
+                      <span
+                        class="text-xs bg-green-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Python</span
+                      >
+                      <span
+                        class="text-xs bg-green-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >pandas</span
+                      >
+                      <span
+                        class="text-xs bg-green-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Google Sheets API</span
+                      >
+                    </div>
                   </a>
                 </div>
 
                 <!-- Project 6 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/Hacking-Tools"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="block"
+                    class="block flex-grow"
                   >
                     <h3 class="text-xl font-bold mb-2">Hacking Tools</h3>
-                    <p class="text-gray-400 mb-3">
+                    <p class="text-gray-400 mb-3 min-h-[4.5rem]">
                       Collection of cybersecurity tools and scripts
                     </p>
-                    <span class="text-xs bg-indigo-600 px-2 py-1 rounded"
-                      >Python</span
-                    >
-                    <span class="text-xs bg-indigo-600 px-2 py-1 rounded"
-                      >Nmap</span
-                    >
-                    <span class="text-xs bg-indigo-600 px-2 py-1 rounded"
-                      >Metasploit</span
-                    >
-                    <span class="text-xs bg-indigo-600 px-2 py-1 rounded"
-                      >Gemini API</span
-                    >
+                    <div class="mt-auto">
+                      <span
+                        class="text-xs bg-indigo-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Python</span
+                      >
+                      <span
+                        class="text-xs bg-indigo-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Nmap</span
+                      >
+                      <span
+                        class="text-xs bg-indigo-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Metasploit</span
+                      >
+                      <span
+                        class="text-xs bg-indigo-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Gemini API</span
+                      >
+                    </div>
                   </a>
                 </div>
 
                 <!-- Project 7 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/Slime-Skirmish"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="block"
+                    class="block flex-grow"
                   >
                     <h3 class="text-xl font-bold mb-2">Slime Skirmish</h3>
-                    <p class="text-gray-400 mb-3">
+                    <p class="text-gray-400 mb-3 min-h-[4.5rem]">
                       2-Dimensional survival game made on Unity game engine
                     </p>
-                    <span class="text-xs bg-orange-500 px-2 py-1 rounded"
-                      >C#</span
-                    >
-                    <span class="text-xs bg-orange-500 px-2 py-1 rounded"
-                      >Unity</span
-                    >
+                    <div class="mt-auto">
+                      <span
+                        class="text-xs bg-orange-500 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >C#</span
+                      >
+                      <span
+                        class="text-xs bg-orange-500 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Unity</span
+                      >
+                    </div>
                   </a>
                 </div>
 
                 <!-- Project 8 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/Texas-Hold-em-Poker"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="block"
+                    class="block flex-grow"
                   >
                     <h3 class="text-xl font-bold mb-2">Texas Hold'em Poker</h3>
-                    <p class="text-gray-400 mb-3">
-                      Play poker against A.I. opponents<br /><br />
+                    <p class="text-gray-400 mb-3 min-h-[4.5rem]">
+                      Play poker against A.I. opponents
                     </p>
-                    <span class="text-xs bg-red-600 px-2 py-1 rounded"
-                      >Python</span
-                    >
+                    <div class="mt-auto">
+                      <span
+                        class="text-xs bg-red-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Python</span
+                      >
+                    </div>
                   </a>
                 </div>
 
