--- a/index.html
+++ b/index.html
@@ -618,28 +618,26 @@
                 <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Calculus I</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Differential calculus<br /><br />
+                    Differential calculus
                   </p>
                 </div>
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Calculus II</h4>
-                  <p class="text-sm text-gray-400 mt-1">
-                    Integral calculus<br /><br />
-                  </p>
+                  <p class="text-sm text-gray-400 mt-1">Integral calculus</p>
                 </div>
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Calculus III</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Multivariable calculus<br /><br />
+                    Multivariable calculus
                   </p>
                 </div>
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Advanced Calculus</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Mathematical analysis<br /><br />
+                    Mathematical analysis
                   </p>
                 </div>
 
